--- a/templates/cognito.yaml
+++ b/templates/cognito.yaml
@@ -58,7 +58,7 @@ Resources:
     DependsOn: UserPoolResourceServer
     Properties:
       UserPoolId: !Ref UserPool
-      ClientName: server-to-server
+      ClientName: !Sub ${AWS::StackName}-all-scopes
       GenerateSecret: True
       ExplicitAuthFlows:
         - ALLOW_REFRESH_TOKEN_AUTH
@@ -82,73 +82,6 @@ Resources:
         - tams-api/write
         - tams-api/delete
 
-  UserPoolClientWeb:
-    Type: AWS::Cognito::UserPoolClient
-    DependsOn: UserPoolResourceServer
-    Properties:
-      UserPoolId: !Ref UserPool
-      ClientName: web-client
-      GenerateSecret: False
-      ExplicitAuthFlows:
-        - ALLOW_REFRESH_TOKEN_AUTH
-        - ALLOW_USER_SRP_AUTH
-      AuthSessionValidity: 3
-      RefreshTokenValidity: 30
-      AccessTokenValidity: 60
-      IdTokenValidity: 60
-      TokenValidityUnits:
-        RefreshToken: days
-        AccessToken: minutes
-        IdToken: minutes
-      PreventUserExistenceErrors: ENABLED
-      SupportedIdentityProviders:
-        - COGNITO
-      AllowedOAuthFlowsUserPoolClient: True
-      AllowedOAuthFlows:
-        - code
-      AllowedOAuthScopes:
-        - openid
-        - tams-api/admin
-        - tams-api/read
-        - tams-api/write
-        - tams-api/delete
-      CallbackURLs:
-        - https://localhost
-      LogoutURLs:
-        - https://localhost
-
-  IdentityPool:
-    Type: AWS::Cognito::IdentityPool
-    Properties:
-      IdentityPoolName: tams-api-web-client
-      AllowUnauthenticatedIdentities: False
-      CognitoIdentityProviders:
-        - ClientId: !Ref UserPoolClientWeb
-          ProviderName: !Sub cognito-idp.${AWS::Region}.amazonaws.com/${UserPool}
-
-  AuthRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Principal:
-              Federated: cognito-identity.amazonaws.com
-            Action: sts:AssumeRoleWithWebIdentity
-            Condition:
-              StringEquals:
-                cognito-identity.amazonaws.com:aud: !Ref IdentityPool
-              ForAnyValue:StringLike:
-                cognito-identity.amazonaws.com:amr: authenticated
-
-  IdentityPoolRoleMap:
-    Type: AWS::Cognito::IdentityPoolRoleAttachment
-    Properties:
-      IdentityPoolId: !Ref IdentityPool
-      Roles:
-        authenticated: !GetAtt AuthRole.Arn
-
 Outputs:
   UserPoolId:
     Value: !Ref UserPool
@@ -158,12 +91,3 @@ Outputs:
 
   UserPoolClientId:
     Value: !Ref UserPoolClient
-
-  UserPoolClientWebId:
-    Value: !Ref UserPoolClientWeb
-
-  IdentityPoolId:
-    Value: !Ref IdentityPool
-
-  AuthRoleName:
-    Value: !Ref AuthRole
